[GTK] WTR doesn't correctly handle the Escape key https://bugs.webkit.org/show_bug.cgi?id=144788

Reviewed by Martin Robinson.

Tools:

Correctly handle 0x001B character code in GTK+ event sender to be
recognized as Escape key, because gdk_unicode_to_keyval() doesn't
handle it. This fixes layout tests using keyDown(String.fromCharCode(0x001B), null);
to dismiss popup menus.

Fixes editing/selection/5354455-1.html.

* WebKitTestRunner/gtk/EventSenderProxyGtk.cpp:
(WTR::getGDKKeySymForKeyRef):

LayoutTests:

Unskip editing/selection/5354455-1.html.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/162826@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183995 268f45cc-cd09-0410-ab3c-d52691b4dbfc